test_cases/fail/21_imaginery_girlfriend.c0
struct hello_WORLD {
    int test;
    string happy_happy_happy;
    string[] banana;

    // type error here
    struct this_type_doesnt_exist_just_like_ur_girlfriend *foo;
};
